--- a/Blog-programacion/estilos/styles.css
+++ b/Blog-programacion/estilos/styles.css
@@ -12,14 +12,14 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
-#grilla{
+#grilla {
     display: grid;
-    grid-template-areas: 
-    "header header"
-    "principal publicidad"
-    "footer footer";
-    grid-template-rows: 100px auto 100px;
-    grid-template-columns: 4fr 1fr;
+    grid-template-areas:
+        "header header"
+        "principal publicidad"
+        "footer footer";
+    grid-template-rows: 100px auto 140px;
+    grid-template-columns: 5fr 1fr;
 
 }
 
@@ -30,30 +30,42 @@ header {
     height: 100px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 12px 0 12px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    text-align: center;
 }
 
-#principal{
+#principal {
     grid-area: principal;
-    border: 2px solid orange;
+    border-right: 1px solid black;
+    margin: 20px 0 20px 0;
+
 }
 
-aside{
+aside {
     grid-area: publicidad;
-    border: 2px solid orange;
+    padding: 15px;
+    color: #111;
 
 }
+
 /* Con este margen del main, alejo el contenido principal del footer */
-main {
+/* main {
     margin-bottom: 100px;
-}
+} */
 
 
 /* Estilo del footer: fondo negro y altura de 140px */
 footer {
     grid-area: footer;
+    display: flex;
+    flex-flow: row nowrap;
     background-color: #000;
     height: 140px;
+    overflow: hidden;
 }
 
 a {
@@ -69,39 +81,33 @@ hr {
 
 /* Id del icono MO */
 #main_icon {
-    padding-top: 13px;
-    height: 82%;
-    position: absolute;
-    left: 0px;
-    margin-left: 5px;
+    height: 64%;
+}
+
+#main_icon img {
+    height: 100%;
 }
 
 /* Los próximos estilos son para el menu de navegación principal */
 .menu {
 
-    display: inline;
     padding: 20px 20px 20px 20px;
 }
 
 .menu__lista li {
     display: inline;
-    float: left;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+
 }
 
 .menu__lista ul {
-    list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
 
 .menu__lista li a {
-    display: inline-block;
     color: white;
-    text-align: center;
-    padding: 14px 16px;
+    padding: 1em 1.2vw;
     text-decoration: none;
 }
 
@@ -111,16 +117,14 @@ hr {
 
 /* Un id especial para el li contacto de la lista de navegación. En este modifico todo para que parezca un botón */
 #contacto {
-    float: right;
-    right: 0px;
+
     width: 170px;
     background-color: #f99500;
     border-radius: 30px;
+    padding: 10px;
     color: #000;
-    font-weight: 600;
-    margin-right: 20px;
-    position: absolute;
-    right: 0px;
+    /* position: absolute; */
+    /* right: 20px; */
 }
 
 /* De aquí en adelante es estilos de los párrafos y encabezados */
@@ -131,12 +135,10 @@ hr {
     height: 50px;
     text-align: center;
     padding: 10px;
-    /* border: #f99500 solid; */
 
 }
 
 .p__info {
-    /* border: #f99500 solid; */
     text-align: center;
     margin: auto;
     padding: 5px;
@@ -153,22 +155,52 @@ hr {
     font-size: x-large;
 }
 
-#tabla_contenido th,
-td {
+.tabla_contenido {
+    width: 95%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: large;
+}
 
-    /* border: 2px #f99500 solid; */
+.tabla_contenido h3 {
+    padding: 12px;
+}
+
+.contenido {
+    width: 33.33%;
+    padding: 10px;
     text-align: center;
-    padding: 10px 15px 10px 15px;
+}
+
+.tabla_contenido img {
+    object-fit: cover;
+    border-radius: 15px;
+
+    width: 90%;
+    aspect-ratio: 1.5;
 
 }
 
-#tabla_contenido img {
-    width: 330px;
-    height: 215px;
+/*
+#tabla_contenido th,
+td {
+
+    text-align: center;
+    padding: 10px 15px 10px 15px;
+
+} */
+
+/* #tabla_contenido img {
+    width: 10em;
+    height: 10em;
     object-fit: cover;
     border-radius: 15px;
-    /* overflow: hidden; */
 
+} */
+#sobre-mi {
+    padding-bottom: 50px;
 }
 
 /* Para que la foto aparezca a la derecha del texto, lo puse dentro del p y le añadí el float */
@@ -189,9 +221,10 @@ Tengo que entender esta sintaxis, porque francamente no se lo que significa */
 }
 
 /* Estilos en el footer */
+
+
 .footer__div {
-    padding: 10px 10px 10px 10px;
-    float: left;
+    /* padding: 10px 10px 10px 10px; */
     width: 85%;
     height: 100%;
     text-align: center;
@@ -220,6 +253,160 @@ footer li a {
     text-decoration: none;
     color: gray;
 }
+
+.hamburguesa {
+    position: relative;
+    width: 30px;
+    height: 4px;
+    background: #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    z-index: 2;
+    transition: 0.3s;
+}
+
+.hamburguesa:before,
+.hamburguesa:after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    right: 0;
+    background: #fff;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.hamburguesa:before {
+    top: -10px;
+    background: #fff;
+    width: 30px;
+}
+
+.hamburguesa:after {
+    top: 10px;
+    background: #fff;
+    width: 30px;
+}
+
+.menu_alternador {
+    /* position: relative; */
+    top: 15px;
+    width: 30px;
+    height: 30px;
+    z-index: 3;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.hamburguesa,
+.menu_alternador {
+    display: none;
+}
+
+.menu input:checked~.hamburguesa {
+    background: transparent;
+
+}
+
+.menu input:checked~.hamburguesa:before {
+    top: 0;
+    transform: rotate(-45deg);
+    width: 20px;
+}
+
+.menu input:checked~.hamburguesa:after {
+    top: 0;
+    transform: rotate(45deg);
+    width: 20px;
+}
+
+.menu input:checked~.menu__lista {
+    right: 0;
+}
+
+@media screen and (max-width: 760px) {
+    #grilla {
+        display: flex;
+        flex-direction: column;
+    }
+
+    header {
+        height: 64px;
+    }
+
+    #main_icon {
+        height: 82%;
+    }
+
+    .menu__lista {
+        display: flex;
+        justify-content: start;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        top: 64px;
+        right: -300px;
+        border: 1px solid black;
+        background-color: #252525;
+        width: 140px;
+        /* padding-top: 60px; */
+    }
+
+    .menu__lista li {
+        width: 100%;
+        margin: 9px;
+    }
+
+    .menu__lista li a,
+    .menu__lista li a:hover {
+        padding: 10px;
+
+        /* box-shadow: 0 1px 1px  rgba(222, 184, 135, 0.5) inset; */
+    }
+
+    .hamburguesa,
+    .menu_alternador {
+        display: block;
+        top: -14px;
+    }
+
+    #main_icon {
+        order: 0;
+    }
+
+    #contacto {
+        order: 1;
+    }
+
+    .menu {
+        order: 2;
+    }
+
+
+}
+
+@media screen and (max-width: 480px) {
+    #grilla {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .tabla_contenido {
+        flex-direction: column;
+    }
+
+    .contenido {
+        width: 95%;
+    }
+
+    #mi_foto {
+            float:none;
+            display: block;
+            margin: auto;
+            padding: 10px;
+    }
+}
+
 
 /* Estilos sección Noticias */
 .noticia {
@@ -298,7 +485,8 @@ form {
     margin: auto;
 
 }
-fieldset{
+
+fieldset {
     border: none;
 }
 
@@ -326,35 +514,6 @@ textarea {
 
 }
 
-/* input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-  }
-  
-  label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
-  }
-  
-  input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-
-  */
-
 .label {
     float: left;
     width: 20%;
@@ -363,9 +522,6 @@ textarea {
     text-align: right;
     padding: 20px 10px 0 0;
 }
-
-
-
 
 .input {
     float: left;
@@ -399,14 +555,16 @@ input[type=reset] {
     margin: 15px;
 }
 
-#tabla_contacto{
+#tabla_contacto {
     margin: auto;
 }
-#tabla_contacto img{
+
+#tabla_contacto img {
     width: 50px;
     height: 50px;
 }
 
-#tabla_contacto th, #tabla_contacto td{
-padding: 10px;
+#tabla_contacto th,
+#tabla_contacto td {
+    padding: 10px;
 }
