--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -19,7 +19,7 @@ body {
         "header header"
         "principal publicidad"
         "footer footer";
-    grid-template-rows: 100px auto 140px;
+    grid-template-rows: 80px auto 140px;
     grid-template-columns: 5fr 1fr;
     gap: 1em;
 
@@ -36,6 +36,7 @@ header {
     padding: 0 0.75em;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
+    ;
 }
 
 #principal {
@@ -83,10 +84,8 @@ hr {
 }
 
 /* Los próximos estilos son para el menu de navegación principal */
-
 .menu__lista li {
     display: inline;
-
 }
 
 .menu__lista ul {
@@ -94,7 +93,7 @@ hr {
 }
 
 .menu__lista li a {
-    padding: 1em 1.2vw;
+    padding: 1.5em 1.2vw;
 }
 
 .menu__lista li a:hover {
@@ -144,9 +143,9 @@ hr {
 }
 
 .contenido {
-    width:33.33%;
+    width: 33.33%;
     padding: 1.2vw;
-    min-width: 200px;
+    min-width: 230px;
 }
 
 .tabla_contenido img {
@@ -233,8 +232,6 @@ footer li {
 }
 
 .menu_alternador {
-    /* position: relative; */
-    top: 15px;
     width: 30px;
     height: 30px;
     z-index: 3;
@@ -271,148 +268,175 @@ footer li {
 /* Estilos sección Noticias */
 .noticia {
     margin: auto;
-    width: 90%;
-    border-bottom: 2px solid orange;
-    text-align: center;
-    padding: 15px;
+    width: 95%;
+    border-bottom: 1px solid orange;
+    padding: 1vw;
 }
 
 .noticia img {
     float: left;
-    width: 300px;
-    height: 200px;
+    width: 18.75em;
+    height: 12.5em;
     object-fit: cover;
-    margin: 0 20px 20px 20px;
-    border-radius: 15px;
+    margin: 0 1em 1em 1em;
+    border-radius: 1em;
 }
 
 .noticia p {
     line-height: 1.5;
     text-align: left;
-    margin: 20px;
+    margin: 1em;
 }
 
 /* Estilos sección Recursos */
 
 .recurso {
     margin: auto;
-    width: 90%;
-    border-bottom: 2px solid orange;
-    /* border: 2px solid orange; */
-
-    padding: 15px;
+    width: 95%;
+    border-bottom: 1px solid orange;
+    padding: 1em;
 }
 
 .recurso img {
     float: left;
-    width: 100px;
-    height: 100px;
+    width: 6.25em;
+    height: 6.25em;
     object-fit: cover;
-    margin: 0 20px 0 0;
-    border-radius: 15px;
+    margin: 0 1.25em 0 0;
+    border-radius: 1em;
+}
+
+.recurso h3 {
+    margin-bottom: 0.625em;
 }
 
 .recurso p {
     line-height: 1.5;
-    text-align: left;
+    text-align: justify;
 
 }
 
 /* Estilos sección Lenguajes */
 .lenguaje {
     margin: auto;
-    width: 90%;
-    border-bottom: 2px solid orange;
-    text-align: center;
-    padding: 15px;
+    width: 95%;
+    border-bottom: 1px solid orange;
+    padding: 1em;
 }
 
 .lenguaje iframe {
     float: left;
-    margin: 0 20px 20px 20px;
+    margin: 0 1em 1em 1em;
     border-radius: 15px;
+    width: 45vw;
+    height: 26vw;
+    min-width: 400px;
+    min-height: 225px;
 }
 
 .lenguaje p {
     line-height: 1.5;
-    text-align: left;
-    margin: 20px;
+    text-align: justify;
+    margin: 1.25em;
 }
 
 /* Estilos formulario */
 form {
-    width: 90%;
+    width: 95%;
     margin: auto;
-
 }
 
 fieldset {
     border: none;
 }
 
-input[type=text],
-select {
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 10px;
-    width: 450px;
-}
-
-select {
-    width: 150px;
-}
-
-textarea {
-    height: 150px;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 10px;
-    font-family: 'Inter', sans-serif;
-    resize: none;
-    width: 450px;
-
-}
-
 .label {
+    display: inline;
     float: left;
     width: 20%;
-    margin-top: 6px;
-
+    margin-top: 0.375em;
     text-align: right;
-    padding: 20px 10px 0 0;
+    padding: 0.625em 0.2em 0 0;
+}
+
+.label_tel {
+    width: 19%;
+}
+
+.label_suscripcion {
+    width: 80%;
 }
 
 .input {
+    display: inline;
     float: left;
     width: 80%;
-    margin-top: 6px;
+    margin-top: 0.375em;
 
 }
+
+.input_suscripcion {
+    width: 20%;
+    padding: 0.625em 0.2em 0 0;
+}
+
+.input_gen {
+    width: 29%;
+}
+
+.input_tel {
+    width: 30.5%;
+}
+
+input[type=text],
+select,
+textarea {
+    padding: 0.75em 1.25em;
+    margin: 0.5em 0;
+    border: none;
+    border-radius: 0.625em;
+    width: 95%;
+}
+
+.form_linea:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+textarea {
+    height: 20vw;
+    resize: none;
+}
+
 
 
 .form_contacto_1 {
     width: 60%;
     float: left;
-    border-right: 2px dashed #f99500;
+    border-right: 1px dashed #f99500;
 }
 
 .form_contacto_2 {
     float: left;
     width: 40%;
-    padding: 20px;
+    padding: 1.25em;
 }
 
 input[type=button],
 input[type=submit],
 input[type=reset] {
     background-color: #f99500;
-    border-radius: 30px;
+    border-radius: 1.875em;
     color: #000;
     border: 1px solid #252525;
     font-weight: 600;
-    padding: 10px;
-    margin: 15px;
+    padding: 0.625em;
+    margin: 1em;
+}
+
+input[type=radio], input[type=checkbox]{
+    margin: 0 0.3em;
 }
 
 #tabla_contacto {
@@ -420,13 +444,13 @@ input[type=reset] {
 }
 
 #tabla_contacto img {
-    width: 50px;
-    height: 50px;
+    width: 3.125em;
+    height: 3.125em;
 }
 
 #tabla_contacto th,
 #tabla_contacto td {
-    padding: 10px;
+    padding: 0.625em;
 }
 
 
@@ -438,6 +462,11 @@ mueste en una columna. Cambia el orden de los elementos en el header, y el nav
     #grilla {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+    }
+
+    #principal {
+        border-right: none;
     }
 
     header {
@@ -459,20 +488,20 @@ mueste en una columna. Cambia el orden de los elementos en el header, y el nav
         border: 1px solid black;
         background-color: #252525;
         width: 140px;
-        /* padding-top: 60px; */
     }
-
+    
     .menu__lista li {
         width: 100%;
-        margin: 9px;
+        padding: 0.625em;
+        box-shadow: inset 0 1px 1px gold;
+        
     }
-
-    .menu__lista li a,
-    .menu__lista li a:hover {
-        padding: 10px;
-
-        /* box-shadow: 0 1px 1px  rgba(222, 184, 135, 0.5) inset; */
+    .menu__lista li a, .menu__lista li a:hover{
+        background: none;
     }
+    .menu__lista li:hover {
+        background: #000;
+}
 
     .hamburguesa,
     .menu_alternador {
@@ -492,7 +521,14 @@ mueste en una columna. Cambia el orden de los elementos en el header, y el nav
         order: 2;
     }
 
-
+    .form_contacto_1,
+    .form_contacto_2 {
+        display: block;
+        width: 100%;
+        border: none;
+        border-bottom: 1px solid #f99500;
+        margin: auto;
+    }
 }
 
 /* Con la pantalla tipo mobile, el contenido también se muestra uno debajo del otro,
@@ -501,12 +537,14 @@ y se vean centradas. */
 
 @media screen and (max-width: 480px) {
 
-    body{
-        font-size: 12.5px;
+    body {
+        font-size: 13.5px;
     }
-    .tabla_contenido {
+
+    /* .tabla_contenido {
         flex-direction: column;
-    }
+
+    } */
 
     .contenido {
         width: 95%;
@@ -517,12 +555,51 @@ y se vean centradas. */
         float: none;
         display: block;
         margin: auto;
-        padding: 10px;
+        padding: 1em;
     }
-
+    #mi_foto{
+        width: 60vw;
+        height: 60vw;
+        
+    }
     .noticia a img {
         width: 90%;
         aspect-ratio: 1.5;
         height: auto;
+    }
+
+    .lenguaje {
+        margin: auto;
+        padding: 0;
+    }
+
+    .lenguaje iframe {
+        margin: auto;
+        display: block;
+        min-width: 95vw;
+        min-height: 56.25vw;
+        ;
+    }
+
+
+    .input,
+    .label {
+        display: block;
+        width: 105%;
+        text-align: left;
+    }
+
+    .label_suscripcion,
+    .input_suscripcion {
+        display: inline;
+        width: 75%;
+    }
+
+    .input_suscripcion {
+        width: 25%;
+    }
+
+    .linea_botones_form{
+        text-align: center;
     }
 }
