--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 /* Ahora configuro el body: fondo gris, color general de letra y tipo de letra */
@@ -36,7 +37,7 @@ header {
     padding: 0 0.75em;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    ;
+    transition: all .5s ease;
 }
 
 #principal {
@@ -93,6 +94,7 @@ hr {
 }
 
 .menu__lista li a {
+    transition: all .5s ease;
     padding: 1.5em 1.2vw;
 }
 
@@ -107,6 +109,18 @@ hr {
     border-radius: 1.875em;
     padding: 0.625em;
     color: #000;
+    transition: all .5s ease;
+}
+
+#contacto:hover {
+    background-color: #ffc46c;
+}
+
+.contenido img:hover,
+.noticia img:hover,
+.recurso img:hover {
+    opacity: .75;
+    transition: .5s ease;
 }
 
 /* De aquí en adelante es estilos de los párrafos y encabezados */
@@ -435,7 +449,8 @@ input[type=reset] {
     margin: 1em;
 }
 
-input[type=radio], input[type=checkbox]{
+input[type=radio],
+input[type=checkbox] {
     margin: 0 0.3em;
 }
 
@@ -489,19 +504,22 @@ mueste en una columna. Cambia el orden de los elementos en el header, y el nav
         background-color: #252525;
         width: 140px;
     }
-    
+
     .menu__lista li {
         width: 100%;
         padding: 0.625em;
         box-shadow: inset 0 1px 1px gold;
-        
+
     }
-    .menu__lista li a, .menu__lista li a:hover{
+
+    .menu__lista li a,
+    .menu__lista li a:hover {
         background: none;
     }
+
     .menu__lista li:hover {
         background: #000;
-}
+    }
 
     .hamburguesa,
     .menu_alternador {
@@ -557,11 +575,13 @@ y se vean centradas. */
         margin: auto;
         padding: 1em;
     }
-    #mi_foto{
+
+    #mi_foto {
         width: 60vw;
         height: 60vw;
-        
+
     }
+
     .noticia a img {
         width: 90%;
         aspect-ratio: 1.5;
@@ -599,7 +619,7 @@ y se vean centradas. */
         width: 25%;
     }
 
-    .linea_botones_form{
+    .linea_botones_form {
         text-align: center;
     }
 }
