--- a/estilos/sass/main.scss
+++ b/estilos/sass/main.scss
@@ -6,3 +6,5 @@
 @import 'diseño/grilla';
 @import 'diseño/header';
 @import 'diseño/aside';
+@import 'diseño/footer';
+@import 'diseño/mediaQueries';
