--- a/estilos/sass/abstractos/_variables.scss
+++ b/estilos/sass/abstractos/_variables.scss
@@ -2,7 +2,8 @@
 $c-fondo: #252525;
 $c-fondoSecund: #000;
 $c-textoPpal: #fff;
-$c-textoSecund: #f99500;
+$c-textoResaltado: #f99500;
+$c-hovers:#111;
 
 //FUENTES
 $fuente-ppal: 'Inter', sans-serif;
