--- a/estilos/sass/diseño/_aside.scss
+++ b/estilos/sass/diseño/_aside.scss
@@ -1,6 +1,6 @@
 aside {
     grid-area: publicidad;
-    color: $c-hovers;
+    color: $c-textoMuerto;
     max-height: 940px;
     overflow: hidden;
     padding-right: 1em;
