--- a/estilos/sass/diseño/_header.scss
+++ b/estilos/sass/diseño/_header.scss
@@ -48,7 +48,7 @@ header {
 /* Un id especial para el li contacto de la lista de navegación. En este modifico todo para que parezca un botón */
 #contacto {
     width: 10em;
-    background-color: $c-textoSecund;
+    background-color: $c-textoAlternativo;
     border-radius: 1.875em;
     padding: 0.625em;
     color: $c-fondoSecund;
