Aplicando SASS a todo el proyecto

--- a/estilos/sass/abstractos/_variables.scss
+++ b/estilos/sass/abstractos/_variables.scss
@@ -14,8 +14,14 @@ $fuente-ppal: 'Inter', sans-serif;
 $fuente-secundaria: 'Poppins', sans-serif;
 
 //TAMAÑOS DE TEXTO
+$t-textoNormal: 1em;
+$t-textoTitulo: $t-textoNormal*1.2;
+
 
 // ESPACIADOS
 
 //MARGENES
+
+//TAMAÑOS DE ELEMENTOS
+$anchoMax: 95%;
 
