--- a/estilos/sass/base/_base.scss
+++ b/estilos/sass/base/_base.scss
@@ -2,6 +2,7 @@
 Estilos más básicos
 */
 
+
 body {
     background-color: $c-fondo;
     color: $c-textoPpal;
@@ -24,24 +25,12 @@ hr {
     border: 1px solid $c-textoResaltado;
 }
 
-// HASTA AQUI VOY
-
-
-.contenido img:hover,
-.noticia img:hover,
-.recurso img:hover {
-    opacity: .75;
-    transition: .5s ease;
-}
-
-/* De aquí en adelante es estilos de los párrafos y encabezados */
-
 .titulo_info {
     font-style: italic;
-    color: #f99500;
+    color: $c-textoResaltado;
     height: 3.125em;
     padding: 0.625em;
-
+    
 }
 
 .p__info {
@@ -51,341 +40,4 @@ hr {
     width: 95%;
 }
 
-/* Contenidos index */
-
-.tabla_contenido {
-    width: 95%;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    font-size: 1.2em;
-}
-
-.tabla_contenido h3 {
-    padding: 1.5vw;
-}
-
-.contenido {
-    width: 33.33%;
-    padding: 1.2vw;
-    min-width: 230px;
-}
-
-.tabla_contenido img {
-    object-fit: cover;
-    border-radius: 0.4em;
-    width: 100%;
-    aspect-ratio: 1.5;
-}
-
-#sobre-mi {
-    padding-bottom: 50px;
-}
-
-/* Para que la foto aparezca a la derecha del texto, lo puse dentro del p y le añadí el float */
-#mi_foto {
-    height: 9.375em;
-    width: 9.375em;
-    float: right;
-    margin: 0 2vw;
-    border-radius: 50%;
-}
-
-/* Esto del Clearfix lo saqué de un tutorial de w3schools para que no salga la imagen fuera del contenedor.
-Tengo que entender esta sintaxis, porque francamente no se lo que significa */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/* Estilos en el footer */
-
-
-.footer__div {
-    padding-top: 10px;
-    width: 85%;
-    height: 100%;
-}
-
-.footer__div a{
-    font-style: italic;
-}
-.footer__div p {
-    padding: 1.5em;
-}
-
-
-footer h4 {
-    padding: 10px;
-}
-
-footer li {
-    list-style-type: none;
-    padding: 0.2em;
-}
-
-.hamburguesa {
-    position: relative;
-    width: 30px;
-    height: 4px;
-    background: #fff;
-    border-radius: 10px;
-    cursor: pointer;
-    z-index: 2;
-    transition: 0.3s;
-}
-
-.hamburguesa:before,
-.hamburguesa:after {
-    content: "";
-    position: absolute;
-    height: 4px;
-    right: 0;
-    background: #fff;
-    border-radius: 10px;
-    transition: 0.3s;
-}
-
-.hamburguesa:before {
-    top: -10px;
-    background: #fff;
-    width: 30px;
-}
-
-.hamburguesa:after {
-    top: 10px;
-    background: #fff;
-    width: 30px;
-}
-
-.menu_alternador {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    z-index: 3;
-    top: 16px;
-    right: 8px;
-    cursor: pointer;
-    opacity: 0;
-}
-
-.hamburguesa,
-.menu_alternador {
-    display: none;
-}
-
-.menu input:checked~.hamburguesa {
-    background: transparent;
-
-}
-
-.menu input:checked~.hamburguesa:before {
-    top: 0;
-    transform: rotate(-45deg);
-    width: 20px;
-}
-
-.menu input:checked~.hamburguesa:after {
-    top: 0;
-    transform: rotate(45deg);
-    width: 20px;
-}
-
-.menu input:checked~.menu__lista {
-    right: 0;
-}
-
-/* Estilos sección Noticias */
-.noticia {
-    margin: auto;
-    width: 95%;
-    border-bottom: 1px solid orange;
-    padding: 1vw;
-}
-
-.noticia img {
-    float: left;
-    width: 18.75em;
-    height: 12.5em;
-    object-fit: cover;
-    margin: 0 1em 1em 1em;
-    border-radius: 1em;
-}
-
-.noticia p {
-    line-height: 1.5;
-    text-align: left;
-    margin: 1em;
-}
-
-/* Estilos sección Recursos */
-
-.recurso {
-    margin: auto;
-    width: 95%;
-    border-bottom: 1px solid orange;
-    padding: 1em;
-}
-
-.recurso img {
-    float: left;
-    width: 6.25em;
-    height: 6.25em;
-    object-fit: cover;
-    margin: 0 1.25em 0 0;
-    border-radius: 1em;
-}
-
-.recurso h3 {
-    margin-bottom: 0.625em;
-}
-
-.recurso p {
-    line-height: 1.5;
-    text-align: justify;
-
-}
-
-/* Estilos sección Lenguajes */
-.lenguaje {
-    margin: auto;
-    width: 95%;
-    border-bottom: 1px solid orange;
-    padding: 1em;
-}
-
-.lenguaje iframe {
-    float: left;
-    margin: 0 1em 1em 1em;
-    border-radius: 15px;
-    width: 45vw;
-    height: 26vw;
-    min-width: 400px;
-    min-height: 225px;
-}
-
-.lenguaje p {
-    line-height: 1.5;
-    text-align: justify;
-    margin: 1.25em;
-}
-
-/* Estilos formulario */
-form {
-    width: 95%;
-    margin: auto;
-}
-
-fieldset {
-    border: none;
-}
-
-.label {
-    display: inline;
-    float: left;
-    width: 20%;
-    margin-top: 0.375em;
-    text-align: right;
-    padding: 0.625em 0.2em 0 0;
-}
-
-.label_tel {
-    width: 19%;
-}
-
-.label_suscripcion {
-    width: 80%;
-}
-
-.input {
-    display: inline;
-    float: left;
-    width: 80%;
-    margin-top: 0.375em;
-
-}
-
-.input_suscripcion {
-    width: 20%;
-    padding: 0.625em 0.2em 0 0;
-}
-
-.input_gen {
-    width: 29%;
-}
-
-.input_tel {
-    width: 30.5%;
-}
-
-input[type=text],
-select,
-textarea {
-    padding: 0.75em 1.25em;
-    margin: 0.5em 0;
-    border: none;
-    border-radius: 0.625em;
-    width: 95%;
-}
-
-.form_linea:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-textarea {
-    height: 20vw;
-    resize: none;
-}
-
-
-
-.form_contacto_1 {
-    width: 60%;
-    float: left;
-    border-right: 1px dashed #f99500;
-}
-
-.form_contacto_2 {
-    float: left;
-    width: 40%;
-    padding: 1.25em;
-}
-
-input[type=button],
-input[type=submit],
-input[type=reset] {
-    background-color: #f99500;
-    border-radius: 1.875em;
-    color: #000;
-    border: 1px solid #252525;
-    font-weight: 600;
-    padding: 0.625em;
-    margin: 1em;
-}
-
-input[type=radio],
-input[type=checkbox] {
-    margin: 0 0.3em;
-}
-
-#tabla_contacto {
-    margin: auto;
-}
-
-#tabla_contacto img {
-    width: 3.125em;
-    height: 3.125em;
-}
-
-#tabla_contacto th,
-#tabla_contacto td {
-    padding: 0.625em;
-}
-
-
-
+// 2DO INTENTO - POR AQUI VOY
