--- a/estilos/sass/main.css
+++ b/estilos/sass/main.css
@@ -1,4 +1,73 @@
 @charset "UTF-8";
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.hamburguesa {
+  position: relative;
+  width: 30px;
+  height: 4px;
+  background: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  z-index: 2;
+  transition: 0.3s;
+}
+.hamburguesa.hamburguesa:before, .hamburguesa.hamburguesa:after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  right: 0;
+  background: #fff;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+.hamburguesa.hamburguesa:before {
+  top: -10px;
+  background: #fff;
+  width: 30px;
+}
+.hamburguesa.hamburguesa:after {
+  top: 10px;
+  background: #fff;
+  width: 30px;
+}
+
+.menu_alternador {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  z-index: 3;
+  top: 16px;
+  right: 8px;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.hamburguesa,
+.menu_alternador {
+  display: none;
+}
+
+.menu input:checked ~ .hamburguesa {
+  background: transparent;
+}
+.menu input:checked ~ .hamburguesa:before {
+  top: 0;
+  transform: rotate(-45deg);
+  width: 20px;
+}
+.menu input:checked ~ .hamburguesa:after {
+  top: 0;
+  transform: rotate(45deg);
+  width: 20px;
+}
+.menu input:checked ~ .menu__lista {
+  right: 0;
+}
+
 *, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
@@ -30,14 +99,6 @@ hr {
   border: 1px solid #f99500;
 }
 
-.contenido img:hover,
-.noticia img:hover,
-.recurso img:hover {
-  opacity: 0.75;
-  transition: 0.5s ease;
-}
-
-/* De aquí en adelante es estilos de los párrafos y encabezados */
 .titulo_info {
   font-style: italic;
   color: #f99500;
@@ -50,336 +111,6 @@ hr {
   padding: 0.3125em;
   line-height: 1.5;
   width: 95%;
-}
-
-/* Contenidos index */
-.tabla_contenido {
-  width: 95%;
-  margin: auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  font-size: 1.2em;
-}
-
-.tabla_contenido h3 {
-  padding: 1.5vw;
-}
-
-.contenido {
-  width: 33.33%;
-  padding: 1.2vw;
-  min-width: 230px;
-}
-
-.tabla_contenido img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 0.4em;
-  width: 100%;
-  aspect-ratio: 1.5;
-}
-
-#sobre-mi {
-  padding-bottom: 50px;
-}
-
-/* Para que la foto aparezca a la derecha del texto, lo puse dentro del p y le añadí el float */
-#mi_foto {
-  height: 9.375em;
-  width: 9.375em;
-  float: right;
-  margin: 0 2vw;
-  border-radius: 50%;
-}
-
-/* Esto del Clearfix lo saqué de un tutorial de w3schools para que no salga la imagen fuera del contenedor.
-Tengo que entender esta sintaxis, porque francamente no se lo que significa */
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-/* Estilos en el footer */
-.footer__div {
-  padding-top: 10px;
-  width: 85%;
-  height: 100%;
-}
-
-.footer__div a {
-  font-style: italic;
-}
-
-.footer__div p {
-  padding: 1.5em;
-}
-
-footer h4 {
-  padding: 10px;
-}
-
-footer li {
-  list-style-type: none;
-  padding: 0.2em;
-}
-
-.hamburguesa {
-  position: relative;
-  width: 30px;
-  height: 4px;
-  background: #fff;
-  border-radius: 10px;
-  cursor: pointer;
-  z-index: 2;
-  transition: 0.3s;
-}
-
-.hamburguesa:before,
-.hamburguesa:after {
-  content: "";
-  position: absolute;
-  height: 4px;
-  right: 0;
-  background: #fff;
-  border-radius: 10px;
-  transition: 0.3s;
-}
-
-.hamburguesa:before {
-  top: -10px;
-  background: #fff;
-  width: 30px;
-}
-
-.hamburguesa:after {
-  top: 10px;
-  background: #fff;
-  width: 30px;
-}
-
-.menu_alternador {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  z-index: 3;
-  top: 16px;
-  right: 8px;
-  cursor: pointer;
-  opacity: 0;
-}
-
-.hamburguesa,
-.menu_alternador {
-  display: none;
-}
-
-.menu input:checked ~ .hamburguesa {
-  background: transparent;
-}
-
-.menu input:checked ~ .hamburguesa:before {
-  top: 0;
-  transform: rotate(-45deg);
-  width: 20px;
-}
-
-.menu input:checked ~ .hamburguesa:after {
-  top: 0;
-  transform: rotate(45deg);
-  width: 20px;
-}
-
-.menu input:checked ~ .menu__lista {
-  right: 0;
-}
-
-/* Estilos sección Noticias */
-.noticia {
-  margin: auto;
-  width: 95%;
-  border-bottom: 1px solid orange;
-  padding: 1vw;
-}
-
-.noticia img {
-  float: left;
-  width: 18.75em;
-  height: 12.5em;
-  -o-object-fit: cover;
-     object-fit: cover;
-  margin: 0 1em 1em 1em;
-  border-radius: 1em;
-}
-
-.noticia p {
-  line-height: 1.5;
-  text-align: left;
-  margin: 1em;
-}
-
-/* Estilos sección Recursos */
-.recurso {
-  margin: auto;
-  width: 95%;
-  border-bottom: 1px solid orange;
-  padding: 1em;
-}
-
-.recurso img {
-  float: left;
-  width: 6.25em;
-  height: 6.25em;
-  -o-object-fit: cover;
-     object-fit: cover;
-  margin: 0 1.25em 0 0;
-  border-radius: 1em;
-}
-
-.recurso h3 {
-  margin-bottom: 0.625em;
-}
-
-.recurso p {
-  line-height: 1.5;
-  text-align: justify;
-}
-
-/* Estilos sección Lenguajes */
-.lenguaje {
-  margin: auto;
-  width: 95%;
-  border-bottom: 1px solid orange;
-  padding: 1em;
-}
-
-.lenguaje iframe {
-  float: left;
-  margin: 0 1em 1em 1em;
-  border-radius: 15px;
-  width: 45vw;
-  height: 26vw;
-  min-width: 400px;
-  min-height: 225px;
-}
-
-.lenguaje p {
-  line-height: 1.5;
-  text-align: justify;
-  margin: 1.25em;
-}
-
-/* Estilos formulario */
-form {
-  width: 95%;
-  margin: auto;
-}
-
-fieldset {
-  border: none;
-}
-
-.label {
-  display: inline;
-  float: left;
-  width: 20%;
-  margin-top: 0.375em;
-  text-align: right;
-  padding: 0.625em 0.2em 0 0;
-}
-
-.label_tel {
-  width: 19%;
-}
-
-.label_suscripcion {
-  width: 80%;
-}
-
-.input {
-  display: inline;
-  float: left;
-  width: 80%;
-  margin-top: 0.375em;
-}
-
-.input_suscripcion {
-  width: 20%;
-  padding: 0.625em 0.2em 0 0;
-}
-
-.input_gen {
-  width: 29%;
-}
-
-.input_tel {
-  width: 30.5%;
-}
-
-input[type=text],
-select,
-textarea {
-  padding: 0.75em 1.25em;
-  margin: 0.5em 0;
-  border: none;
-  border-radius: 0.625em;
-  width: 95%;
-}
-
-.form_linea:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-textarea {
-  height: 20vw;
-  resize: none;
-}
-
-.form_contacto_1 {
-  width: 60%;
-  float: left;
-  border-right: 1px dashed #f99500;
-}
-
-.form_contacto_2 {
-  float: left;
-  width: 40%;
-  padding: 1.25em;
-}
-
-input[type=button],
-input[type=submit],
-input[type=reset] {
-  background-color: #f99500;
-  border-radius: 1.875em;
-  color: #000;
-  border: 1px solid #252525;
-  font-weight: 600;
-  padding: 0.625em;
-  margin: 1em;
-}
-
-input[type=radio],
-input[type=checkbox] {
-  margin: 0 0.3em;
-}
-
-#tabla_contacto {
-  margin: auto;
-}
-
-#tabla_contacto img {
-  width: 3.125em;
-  height: 3.125em;
-}
-
-#tabla_contacto th,
-#tabla_contacto td {
-  padding: 0.625em;
 }
 
 #grilla {
@@ -403,7 +134,6 @@ header {
   transition: all 0.5s ease;
 }
 
-/* Id del icono MO */
 #main_icon {
   height: 64%;
 }
@@ -415,7 +145,6 @@ header {
           animation: icono 1.3s ease-in-out infinite;
 }
 
-/* Los próximos estilos son para el menu de navegación principal */
 .menu__lista li {
   display: inline;
 }
@@ -430,16 +159,14 @@ header {
   background-color: #111;
 }
 
-/* Un id especial para el li contacto de la lista de navegación. En este modifico todo para que parezca un botón */
 #contacto {
   width: 10em;
-  background-color: #000;
+  background-color: #f99500;
   border-radius: 1.875em;
   padding: 0.625em;
   color: #000;
   transition: all 0.5s ease;
 }
-
 #contacto:hover {
   background-color: #ffc46c;
   -webkit-animation: icono 1.5s ease-in-out infinite;
@@ -477,6 +204,24 @@ footer {
   flex-flow: row nowrap;
   background-image: linear-gradient(#252525, #000, #000, #000);
   overflow: hidden;
+}
+footer .footer__div {
+  padding-top: 10px;
+  width: 85%;
+  height: 100%;
+}
+footer .footer__div a {
+  font-style: italic;
+}
+footer .footer__div p {
+  padding: 1.5em;
+}
+footer h4 {
+  padding: 10px;
+}
+footer li {
+  list-style-type: none;
+  padding: 0.2em;
 }
 
 /* Cuando llega a 760px, la grilla pasa de ser grid a ser flex, para que todo se 
@@ -601,4 +346,225 @@ y se vean centradas. */
   .linea_botones_form {
     text-align: center;
   }
+}
+form {
+  width: 95%;
+  margin: auto;
+}
+form fieldset {
+  border: none;
+}
+form fieldset .form_contacto_1 {
+  width: 60%;
+  float: left;
+  border-right: 1px dashed #f99500;
+}
+form fieldset .form_contacto_2 {
+  float: left;
+  width: 40%;
+  padding: 1.25em;
+}
+
+.label {
+  display: inline;
+  float: left;
+  width: 20%;
+  margin-top: 0.375em;
+  text-align: right;
+  padding: 0.625em 0.2em 0 0;
+}
+
+.label_tel {
+  width: 19%;
+}
+
+.label_suscripcion {
+  width: 80%;
+}
+
+.input {
+  display: inline;
+  float: left;
+  width: 80%;
+  margin-top: 0.375em;
+}
+
+.input_suscripcion {
+  width: 20%;
+  padding: 0.625em 0.2em 0 0;
+}
+
+.input_gen {
+  width: 29%;
+}
+
+.input_tel {
+  width: 30.5%;
+}
+
+input[type=text],
+select,
+textarea {
+  padding: 0.75em 1.25em;
+  margin: 0.5em 0;
+  border: none;
+  border-radius: 0.625em;
+  width: 95%;
+}
+
+.form_linea:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+textarea {
+  height: 20vw;
+  resize: none;
+}
+
+input[type=button],
+input[type=submit],
+input[type=reset] {
+  background-color: #f99500;
+  border-radius: 1.875em;
+  color: #000;
+  border: 1px solid #252525;
+  font-weight: 600;
+  padding: 0.625em;
+  margin: 1em;
+}
+
+input[type=radio],
+input[type=checkbox] {
+  margin: 0 0.3em;
+}
+
+#tabla_contacto {
+  margin: auto;
+}
+
+#tabla_contacto img {
+  width: 3.125em;
+  height: 3.125em;
+}
+
+#tabla_contacto th,
+#tabla_contacto td {
+  padding: 0.625em;
+}
+
+.tabla_contenido {
+  width: 95%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  font-size: 1.2em;
+}
+.tabla_contenido .contenido {
+  width: 33.33%;
+  padding: 1.2vw;
+  min-width: 230px;
+}
+.tabla_contenido .contenido h3 {
+  padding: 1.5vw;
+}
+.tabla_contenido .contenido img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 0.4em;
+  width: 100%;
+  aspect-ratio: 1.5;
+}
+.tabla_contenido .contenido img:hover {
+  opacity: 0.75;
+  transition: 0.5s ease;
+}
+
+#sobre-mi {
+  padding-bottom: 50px;
+}
+
+/* Para que la foto aparezca a la derecha del texto, lo puse dentro del p y le añadí el float */
+#mi_foto {
+  height: 9.375em;
+  width: 9.375em;
+  float: right;
+  margin: 0 2vw;
+  border-radius: 50%;
+}
+
+.lenguaje {
+  margin: auto;
+  width: 95%;
+  border-bottom: 1px solid orange;
+  padding: 1em;
+}
+.lenguaje iframe {
+  float: left;
+  margin: 0 1em 1em 1em;
+  border-radius: 15px;
+  width: 45vw;
+  height: 26vw;
+  min-width: 400px;
+  min-height: 225px;
+}
+.lenguaje p {
+  line-height: 1.5;
+  text-align: justify;
+  margin: 1.25em;
+}
+
+.noticia {
+  margin: auto;
+  width: 95%;
+  border-bottom: 1px solid orange;
+  padding: 1vw;
+}
+.noticia img {
+  float: left;
+  width: 18.75em;
+  height: 12.5em;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0 1em 1em 1em;
+  border-radius: 1em;
+}
+.noticia img:hover {
+  opacity: 0.75;
+  transition: 0.5s ease;
+}
+.noticia p {
+  line-height: 1.5;
+  text-align: left;
+  margin: 1em;
+}
+
+.recurso {
+  margin: auto;
+  width: 95%;
+  border-bottom: 1px solid orange;
+  padding: 1em;
+}
+.recurso img {
+  float: left;
+  width: 6.25em;
+  height: 6.25em;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0 1.25em 0 0;
+  border-radius: 1em;
+}
+.recurso img:hover {
+  opacity: 0.75;
+  transition: 0.5s ease;
+}
+.recurso h3 {
+  margin-bottom: 0.625em;
+}
+.recurso p {
+  line-height: 1.5;
+  text-align: justify;
 }/*# sourceMappingURL=main.css.map */
